# streamXflow

backend/agents/: agent.py
frontend/: pubspec.yaml
frontend/lib/: main.dart
frontend/lib/models/: chat_message.dart
frontend/lib/screens/: chat_screen.dart  live_conversation_screen.dart
frontend/lib/widgets/: model_selector_modal.dart  typing_indicator.dart  voice_input_widget.dart
frontend/linux/runner/: my_application.cc
stream/: main.py  pyproject.toml  requiremnets.txt
stream/models/: gem_tts.py  gemini.py  gpt.py  krypton.py  local.py  speech.py  test_models.py  tts.py
stream/tools/: available_tools.py
